Avoid overflow

--- a/modernism/static/_sass/modernism.scss
+++ b/modernism/static/_sass/modernism.scss
@@ -157,6 +157,10 @@ body {
             }
         }
     }
+    .content {
+        width: 100%;
+        overflow: hidden;
+    }
    
 }
 
